tests/machine/x/c/map_membership.error
exit status 1
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘map_string_int_put’:
/workspace/mochi/tests/machine/x/c/map_membership.c:33:9: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   33 |     if (strcmp(m->data[i].key, k) == 0) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/map_membership.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/map_membership.c:87:22: error: invalid initializer
   87 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2};
      |                      ^
